@startuml

title __BATTLESHIP's Class Diagram__\n

  package cz.kksffn {
    class cz.kksffn.Battleship {
    }
  }
  

  package cz.kksffn {
    package display {
      interface cz.kksffn.display.IMap {
      }
    }
  }
  

  package cz.kksffn {
    package display {
      class cz.kksffn.display.MapInConsole {
      }
    }
  }
  

  package cz.kksffn {
    package game {
      class cz.kksffn.game.CommunicationWithUser {
      }
    }
  }
  

  package cz.kksffn {
    package game {
      class cz.kksffn.game.Referee {
      }
    }
  }
  

  package cz.kksffn {
    package player {
      class cz.kksffn.player.AI {
      }
    }
  }
  

  package cz.kksffn {
    package player {
      abstract class cz.kksffn.player.APlayer {
      }
    }
  }
  

  package cz.kksffn {
    package player {
      class cz.kksffn.player.Human {
      }
    }
  }
  

  package cz.kksffn {
    package player {
      interface cz.kksffn.player.IPlayer {
      }
    }
  }
  

  package cz.kksffn {
    package player {
      interface cz.kksffn.player.IStrategy {
      }
    }
  }
  

  package cz.kksffn {
    package player {
      class cz.kksffn.player.Strategy {
      }
    }
  }
  

  package cz.kksffn {
    package prepare {
      abstract class cz.kksffn.prepare.ASetShips {
      }
    }
  }
  

  package cz.kksffn {
    package prepare {
      interface cz.kksffn.prepare.ISetShips {
      }
    }
  }
  

  package cz.kksffn {
    package prepare {
      class cz.kksffn.prepare.SetShipsInConsole {
      }
    }
  }
  

  package cz.kksffn {
    package prepare {
      enum cz.kksffn.prepare.ShipName {
      }
    }
  }
  

  cz.kksffn.display.MapInConsole .up.|> cz.kksffn.display.IMap
  cz.kksffn.game.Referee o-- cz.kksffn.display.IMap : mapOfPlayer1Ships
  cz.kksffn.game.Referee o-- cz.kksffn.display.IMap : mapOfPlayersGuesses
  cz.kksffn.game.Referee o-- cz.kksffn.player.IPlayer : player1
  cz.kksffn.game.Referee o-- cz.kksffn.player.IPlayer : player2
  cz.kksffn.player.AI -up-|> cz.kksffn.player.APlayer
  cz.kksffn.player.AI o-- cz.kksffn.player.IStrategy : think
  cz.kksffn.player.APlayer .up.|> cz.kksffn.player.IPlayer
  cz.kksffn.player.APlayer o-- cz.kksffn.prepare.ISetShips : sea
  cz.kksffn.player.Human -up-|> cz.kksffn.player.APlayer
  cz.kksffn.player.Strategy .up.|> cz.kksffn.player.IStrategy
  cz.kksffn.prepare.ASetShips .up.|> cz.kksffn.prepare.ISetShips
  cz.kksffn.prepare.ASetShips o-- cz.kksffn.display.IMap : map
  cz.kksffn.prepare.SetShipsInConsole -up-|> cz.kksffn.prepare.ASetShips
  cz.kksffn.prepare.SetShipsInConsole o-- cz.kksffn.display.IMap : map


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
